--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
             "src":"ec/wsgi.py",
             "use":"@vercel/python"
         }
+    ],
+    "router":[
+        {
+            "src":"/(.*)",
+            "dest":"ec/wsgi.py"
+        }
     ]
 }
